# dayz_ESP32_Waveshare_playerstracker

./: .gitignore  CLAUDE.md  CMakeLists.txt  ESP32_development.md  HARDWARE_MANUAL.md  README.md  UI_Vol2.md  build.ps1  build_and_flash.ps1  build_esp32.py  checkports.ps1  do_build.bat  do_build.ps1  do_flash.ps1  flash.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  serial_capture.ps1  serial_mon.py
.github/workflows/: build.yml
main/: CMakeLists.txt  app_init.c  app_init.h  app_state.c  app_state.h  config.h  events.c  events.h  idf_component.yml  main.c
main/drivers/: buzzer.c  buzzer.h  display.c  display.h  io_expander.c  io_expander.h  sd_card.c  sd_card.h  usb_msc.c  usb_msc.h
main/events/: event_handler.c  event_handler.h
main/power/: screensaver.c  screensaver.h
main/services/: alert_manager.c  alert_manager.h  battlemetrics.c  battlemetrics.h  crash_log.c  crash_log.h  history_store.c  history_store.h  nvs_cache.c  nvs_cache.h  nvs_keys.h  path_validator.c  path_validator.h  restart_manager.c  restart_manager.h  secondary_fetch.c  secondary_fetch.h  server_query.c  server_query.h  settings_store.c  settings_store.h  storage_backend.c  storage_backend.h  storage_config.h  storage_paths.c  storage_paths.h  wifi_manager.c  wifi_manager.h
main/ui/: map_background.c  map_background.h  screen_builder.c  screen_builder.h  screen_heatmap.c  screen_heatmap.h  screen_history.c  screen_history.h  screen_screensaver.c  screen_screensaver.h  ui_alerts.c  ui_alerts.h  ui_callbacks.c  ui_callbacks.h  ui_context.c  ui_context.h  ui_main.h  ui_styles.c  ui_styles.h  ui_update.c  ui_update.h  ui_widgets.c  ui_widgets.h
