idf_component_register(
    SRCS
        "main.c"
        "app_init.c"
        "app_state.c"
        "events.c"
        "drivers/buzzer.c"
        "drivers/io_expander.c"
        "drivers/sd_card.c"
        "drivers/display.c"
        "drivers/usb_msc.c"
        "services/wifi_manager.c"
        "services/battlemetrics.c"
        "services/settings_store.c"
        "services/history_store.c"
        "services/secondary_fetch.c"
        "services/restart_manager.c"
        "services/alert_manager.c"
        "services/storage_backend.c"
        "services/storage_paths.c"
        "services/path_validator.c"
        "services/nvs_cache.c"
        "services/server_query.c"
        "ui/ui_styles.c"
        "ui/ui_widgets.c"
        "ui/ui_alerts.c"
        "ui/ui_callbacks.c"
        "ui/map_background.c"
        "ui/screen_history.c"
        "power/screensaver.c"
        "events/event_handler.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "services"
        "ui"
        "power"
        "events"
)
